Fri Dec 10 15:04:31 PST 2004  avuton@gmail.com
  * Fix issue with double encoding url

Fri Dec 10 15:00:25 PST 2004  avuton@gmail.com
  * Fix core phpMp issue with moving time around in $config["display_fields"] or removing it completely even.

Fri Dec 10 14:00:27 PST 2004  avuton@gmail.com
  * Fix problems with special chars and 'find'ing

Fri Dec 10 20:26:44 PST 2004  avuton@gmail.com
  * Scrap ChangeLog in favor of long ChangeLog

Fri Dec 10 17:58:31 PST 2004  avuton@gmail.com
  * TODO update

Fri Dec 10 17:41:47 PST 2004  avuton@gmail.com
  * Remove personal servers, fix the border size comment, and add description for workaround of 'Time' until it's completely fixed.

Fri Dec 10 17:38:48 PST 2004  avuton@gmail.com
  * This also makes the colors for stats like the rest

Fri Dec 10 17:36:58 PST 2004  avuton@gmail.com
  * This makes the music table colors exactly like the rest of the *table colors

Fri Dec 10 17:32:50 PST 2004  avuton@gmail.com
  * This completely fixes filenames_only

Wed Dec  8 20:37:52 PST 2004  avuton@gmail.com
  * We have appeared to have (re)fixed the rawurl*() stuff

Wed Dec  8 20:06:57 PST 2004  avuton@gmail.com
  * Reorganization of lsinfo2musicdir(), I'm sure there's more to come 

Sat Nov 27 14:20:16 PST 2004  avuton@gmail.com
  * Fix bug for sorting without filenames.

Sun Nov 28 03:49:01 PST 2004  avuton@gmail.com
  * Added Playlists Hiding Option

Sun Nov 28 02:36:18 PST 2004  avuton@gmail.com
  * Spacing & Fix for finding with spaces in the argument

Sat Nov 27 08:16:39 PST 2004  avuton@gmail.com
  * If sorting by 'Time' don't show the index

Sat Nov 27 05:58:18 PST 2004  avuton@gmail.com
  * Fixes for the last patchbomb

Sat Nov 27 05:12:59 PST 2004  avuton@gmail.com
  * Sorting updates
  
  When you click on the sort every other time you click it it will reverse order
  This fixes the sort issue when clicking update
  Make the grabbed variables from GET/POST more specific

Sat Nov 27 01:19:05 PST 2004  avuton@gmail.com