@@ -371,7 +371,14 @@ function search( $fp, $color, $config, $dir, $search, $find, $arg, $sort, $serve
 	$arg_url = rawurlencode( $arg );
 	if ( isset( $mprint ))
 	{
-		$local_url = "index.php?body=main&amp;feature=search&amp;search=$search&amp;arg=$arg_url&amp;dir=$dir_url";
+		if( empty( $search ))
+		{
+			$local_url = "index.php?body=main&amp;feature=search&amp;find=$find&amp;arg=$arg_url&amp;dir=$dir_url";
+		}
+		else
+		{
+			$local_url = "index.php?body=main&amp;feature=search&amp;search=$search&amp;arg=$arg_url&amp;dir=$dir_url";
+		}
 		printMusicTable( $config, $color, $sort_array, $server, $mprint, $local_url, $add_all, $mindex, $dir, $addperm, $feature, $ordered );
 	}
 
